--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,13 +1,16 @@
 name: markdown_prettier
-description: A markdown prettier library written in Dart.
-version: 0.1.0
+description: A Markdown prettier library written in Dart.
+version: 0.1.0-alpha
+repository: https://github.com/tagnote-app/markdown_prettier
 
 environment:
   sdk: '>=2.18.2 <3.0.0'
 
 dependencies:
-  dart_markdown: ^3.0.0
+  dart_markdown: ^3.1.0
+  source_span: ^1.9.1
 
 dev_dependencies:
   lints: ^2.0.0
+  path: ^1.8.2
   test: ^1.16.0
